# finance_fastapi

./: .env  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: dae6e0c70b83_create_user_table.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: login.py  users.py
app/core/: config.py  security.py
app/crud/: user.py
app/db/: base.py  session.py
app/models/: user.py
app/schemas/: user.py
tests/: conftest.py  test_login.py  test_users.py
