[project]
name = "finance-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "fillipeberssot95@hotmail.com",email = "fillipeberssot95@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.123.5,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "psycopg[binary] (>=3.3.1,<4.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "bcrypt (==4.0.1)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.7"
taskipy = "^1.14.1"
pytest = "^9.0.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.3.0"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
]


[tool.ruff]
line-length = 88
extend-exclude = ["alembic", "env.py"]

[tool.ruff.lint]
preview = true
# Regras que o Ruff vai verificar:
# E = Erros de estilo (PEP8)
# F = Erros lógicos (variável não usada, etc)
# I = Importação (organizar imports automaticamente)
# W = Avisos (Warnings)
select = ["E", "F", "I", "W"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.taskipy.tasks]
run = "uvicorn app.main:app --reload"
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."
test = "pytest -s -x -vv"

alembic_autogenerate = "alembic revision --autogenerate -m"
alembic_upgrade = "alembic upgrade head"
